--- a/output.css
+++ b/output.css
@@ -559,6 +559,49 @@ p {
   --tw-backdrop-sepia:  ;
 }
 
+/* svg wrapper */
+
+.credits {
+  position: relative;
+  margin: 32px auto;
+  width: 320px;
+}
+
+.credits-shape {
+  stroke-dasharray: 140 540;
+  stroke-dashoffset: -474;
+  stroke-width: 8px;
+  fill: transparent;
+  stroke: #19f6e8;
+  border-bottom: 5px solid black;
+  transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+}
+
+.credits-pretext {
+  font-family: 'Roboto Condensed';
+  font-size: 12px;
+  line-height: 32px;
+  letter-spacing: 2px;
+  color: #fff;
+  position: relative;
+}
+
+.credits-text {
+  font-family: 'Roboto Condensed';
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: 4px;
+  color: #fff;
+  top: -46px;
+  position: relative;
+}
+
+.credits:hover .credits-shape {
+  stroke-width: 2px;
+  stroke-dashoffset: 0;
+  stroke-dasharray: 760;
+}
+
 .visible {
   visibility: visible;
 }
@@ -606,6 +649,10 @@ p {
   margin-bottom: 1rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mr-6 {
   margin-right: 1.5rem;
 }
@@ -622,20 +669,12 @@ p {
   margin-top: 6rem;
 }
 
-.mt-32 {
-  margin-top: 8rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .inline-block {
@@ -679,16 +718,8 @@ p {
   height: min-content;
 }
 
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-3\/4 {
-  width: 75%;
+.w-20 {
+  width: 5rem;
 }
 
 .w-32 {
@@ -705,14 +736,6 @@ p {
 
 .w-full {
   width: 100%;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-20 {
-  width: 5rem;
 }
 
 .max-w-fit {
